Update MovieService.java
List.of  --> Array.asList