@@ -8,7 +8,7 @@ import java.util.List;
 @Service
 public class MovieService {
 
-    private final List<MovieScene> scenes =  List.of(
+    private final List<MovieScene> scenes =  Arrays.asList(
             new MovieScene(1, "Scene 1"),
             new MovieScene(2, "Scene 2"),
             new MovieScene(3, "Scene 3"),
